<?xml version="1.0"?>
<package format="3">
  <name>my_param_node</name>
  <version>0.0.0</version>
  <description>ROS 2 parameter handling example</description>

  <maintainer email="admin@todo.todo">admin</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
