<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_pub1</name>
  <version>0.0.0</version>
  <description>ROS 2 기본 퍼블리셔-서브스크라이버 패키지</description>

  <maintainer email="admin@todo.todo">admin</maintainer>
  <license>Apache-2.0</license>

  <!-- 필수 의존성 추가 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- 테스트 관련 의존성 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>