<?xml version="1.0"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>Control TurtleBot3 using ROS 2</description>

  <maintainer email="admin@todo.todo">admin</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlebot3_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
